--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
+
   <body>
+    <!-- Box for the password generator -->
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
@@ -31,4 +33,5 @@
     </div>
     <script src="script.js"></script>
   </body>
+
 </html>
